desarrollo de retiro de caja

--- a/src/app/cuadre-caja/cuadre-caja.component.html
+++ b/src/app/cuadre-caja/cuadre-caja.component.html
@@ -181,6 +181,16 @@
             </div>
             <div class="row">
                 <div class="col col-md-3">
+                    Retiros Caja
+                </div>
+                <div class="col col-md-3">
+                    <input class="form-control" [(ngModel)]="cuadreCajaVo.retiro_caja"  readonly>
+                </div>
+                <div class="col col-md-3"></div>
+                <div class="col col-md-3"></div>
+            </div>
+            <div class="row">
+                <div class="col col-md-3">
                     Gastado
                 </div>
                 <div class="col col-md-3">
