--- a/src/app/estado-documentos/estado-documentos.component.html
+++ b/src/app/estado-documentos/estado-documentos.component.html
@@ -64,15 +64,15 @@
             data-toggle="modal" data-target="#estadosModal">
             <i class="fas fa-search"></i>
           </button>
-          <button type="button" (click)="enviarUno(ordenes)" title="Reenviar a la DIAN" class="btn btn-secondary btn-sm mr-1"
+          <button type="button" (click)="enviarUno(ordenes)" title="Reenviar a la DIAN" class="btn btn-secondary btn-sm mr-1" [disabled]="ordenes.invoice_id!=4"
           data-toggle="modal" data-target="#exampleModal">
           <i class="fas fa-sync"></i>
         </button>
-        <button type="button" (click)="descargarPDF(ordenes)" title="Descargar Representación grafica" class="btn btn-secondary btn-sm mr-1"
+        <button type="button" (click)="descargarPDF(ordenes)" title="Descargar Representación grafica" class="btn btn-secondary btn-sm mr-1" [disabled]="ordenes.invoice_id!=5"
           data-toggle="modal" >
           <i class="far fa-file-pdf"></i>
         </button>
-        <button type="button" (click)="descargarXML(ordenes)" title="Descargar XML" class="btn btn-secondary btn-sm mr-1"
+        <button type="button" (click)="descargarXML(ordenes)" title="Descargar XML" class="btn btn-secondary btn-sm mr-1" [disabled]="ordenes.invoice_id!=5"
        >
         <i class="far fa-file-code"></i>
       </button>
