--- a/src/app/cliente/cliente.component.html
+++ b/src/app/cliente/cliente.component.html
@@ -131,6 +131,15 @@
         </div>
         <div class="form-row">
           <div class="form-group col-md-6 col-sm-6">
+            * Tipo Empresa
+            <select id="tipoEmpresa" name="tipoEmpresa" #tipoEmpresa       
+                [(ngModel)]="clienteNew.fact_tipo_empresa_id" class="form-control">
+                <option *ngFor="let pago of tipoEmpresaList" [value]="pago.fact_tipo_empresa_id">
+                    {{pago.nombre}}
+                </option>
+            </select>
+        </div>
+          <div class="form-group col-md-6 col-sm-6">
             % de retención
             <input class="form-control" id="retencion" type="number" min="0" max="100" placeholder="% de retención" name="retencion"
               #retencion required [(ngModel)]="clienteNew.retencion">
