--- a/src/app/envio-documentos/envio-documentos.component.html
+++ b/src/app/envio-documentos/envio-documentos.component.html
@@ -28,9 +28,10 @@
 
   </div>
   <div class="form-row">
-    <div class="form-group col-md-3 col-sm-6">
+    <div class="form-group col-md-4 col-sm-6">
       <button type="button" class="btn btn-primary mr-1">Buscar</button>
       <button type="button" class="btn btn-primary mr-1" (click)="validarEnviar()">Enviar</button>
+      <button type="button" class="btn btn-primary mr-1" (click)="validarDescartar()">Descartar</button>
       <button type="button" class="btn btn-primary" (click)="exportar() ">Exportar</button>
     </div>
     <div class="form-group col-md-6 col-sm-6">
@@ -96,6 +97,34 @@
       </div>
     </div>
   </div>
+
+  
+  <!-- descartar Modal -->
+  <div class="modal fade" id="descartarModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Descartar documentos seleccionados</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Los documentos seleccionados serán descartados y NO serán enviados a la DIAN mediante facturación electrónica,
+          está seguro de
+          de descartarlos?
+          <br />
+          <h6>Documentos a Descartar: {{documentoMap.length}}</h6>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-primary" (click)="descartarDocumentos()">Descartar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- enviardo Modal -->
   <div class="modal fade bd-example-modal-sm" id="enviardoModal" tabindex="-1" role="dialog"
     aria-labelledby="exampleModalLabel" data-backdrop="static" data-keyboard="false">
@@ -123,7 +152,7 @@
       </div>
     </div>
   </div>
-  <ngx-qrcode qrc-element-type="url" [qrc-value]="ngxQrcode2" id="qrcode1" style="display: none;" ></ngx-qrcode>
+  <ngx-qrcode qrc-element-type="url" [qrc-value]="ngxQrcode2" id="qrcode1" style="display: none;"></ngx-qrcode>
   <div class="col col-ms-1">
     <a href="#" name="downloadZipLink" #downloadZipLink id="downloadZipLink" download>
 
