--- a/src/app/reporte-productos/reporte-productos.component.html
+++ b/src/app/reporte-productos/reporte-productos.component.html
@@ -15,6 +15,7 @@
         </option>
       </select>
     </div>
+
     <div class="form-group col-md-6 col-sm-6">
       Proveedor
       <select id="proveedorPV" name="proveedorPV" #proveedorPV placeholder=""
@@ -25,6 +26,22 @@
        </option>
       </select>
     </div>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6 col-sm-6">
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="agotado" #agotado value="option1"  (change)="estrella(agotado,$event)">
+        <label class="form-check-label" for="inlineRadio1">Agotados </label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="stock" #stock value="option2" (change)="estrella(stock,$event)">
+        <label class="form-check-label" for="inlineRadio2">Stock mínimo</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="producto"  #producto value="option3"  (change)="estrella(producto,$event)">
+        <label class="form-check-label" for="inlineRadio3">Producto estrella</label>
+      </div>
+    </div> 
   </div>
   <div class="form-row">
     <button type="button" class="btn btn-primary ml-2"
