--- a/src/app/inventario-fisico/inventario-fisico.component.html
+++ b/src/app/inventario-fisico/inventario-fisico.component.html
@@ -272,7 +272,7 @@
         <div class="modal-body">
           <div class="form-row">
             <div class="form-group col-md-6 col-sm-6">
-              Primer nombre
+              * Nombre
               <input class="form-control" id="nombreCliente" placeholder="* Nombres cliente" name="nombreCliente"
                 #nombreCliente required [(ngModel)]="productoNew.nombre">
             </div>
