--- a/src/app/gestion-orden/gestion-orden.component.html
+++ b/src/app/gestion-orden/gestion-orden.component.html
@@ -476,7 +476,15 @@
                     #mailCliente required [(ngModel)]="clienteNew.mail">
                 </div>
                 <div class="form-group col-md-6 col-sm-6">
-                </div>
+                  * Tipo Empresa
+                  <select id="tipoEmpresa" name="tipoEmpresa" #tipoEmpresa
+                      (keyup)="controlTeclasCliente($event,tipoEmpresa)"
+                      [(ngModel)]="clienteNew.fact_tipo_empresa_id" class="form-control">
+                      <option *ngFor="let pago of tipoEmpresaList" [value]="pago.fact_tipo_empresa_id">
+                          {{pago.nombre}}
+                      </option>
+                  </select>
+              </div>
               </div>
             </div>
 
