se agrega pantalla de tutoriales

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,6 +22,9 @@
         <a href="#">Recordar contraseña</a>
       </div>
       <div class="col-12 forgot">
+        <a href="#"  routerLink="/tutoriales">Tutoriales</a>
+      </div>
+      <div class="col-12 forgot">
         <a href="http://effectivesoftware.com.co/">effectivesoftware.com.co</a>
       </div>
     </div>
