se activa edicion de ordenes

--- a/src/app/tutoriales/tutoriales.component.html
+++ b/src/app/tutoriales/tutoriales.component.html
@@ -16,5 +16,9 @@
   <a href="https://www.youtube.com/watch?v=sXOvKHBYGVQ"   target="_blank" style="color:blanchedalmond">Edición de productos por inventario fisico</a>
   <br />
   <a href="https://www.youtube.com/watch?v=VPGUxlLa_TQ"   target="_blank" style="color:blanchedalmond">Creación de grupo</a>
+  <br />
+  <a href="https://www.youtube.com/watch?v=ZmGGZVOggM8"   target="_blank" style="color:blanchedalmond">Inventario fisico</a>
+  <br />
+  <a href="https://www.youtube.com/watch?v=WPpO_m5tKU0"   target="_blank" style="color:blanchedalmond">Leberar cuadre de caja</a>
 
 </div>
