--- a/src/app/gestion-orden/gestion-orden.component.html
+++ b/src/app/gestion-orden/gestion-orden.component.html
@@ -158,12 +158,12 @@
         <tbody>
           <tr *ngFor="let ordenes of detallesList">
             <th scope="row">
-              <button type="button" (click)="editarItem(ordenes)" [disabled]="documento.impreso==1"
+              <button type="button" (click)="editarItem(ordenes)" 
                 class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#exampleModal">
                 Editar
               </button>
               <!-- Button trigger modal -->
-              <button type="button" (click)="eliminarItem(ordenes)" [disabled]="documento.impreso==1"
+              <button type="button" (click)="eliminarItem(ordenes)" 
                 class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#eliminarModal">
                 Eliminar
               </button>
