--- a/src/app/gestion-orden/gestion-orden.component.html
+++ b/src/app/gestion-orden/gestion-orden.component.html
@@ -547,6 +547,9 @@
               <div class="form-row">
                 <b>Consecutivo DIAN: </b> {{documentoFactura.consecutivo_dian}}
               </div>
+              <div class="form-row">
+                <b>Tipo documento: </b> {{documentoFactura.consecutivo_dian}}
+              </div>
             </div>
           </div>
           <div class="form-row">
