--- a/src/app/cliente/cliente.component.html
+++ b/src/app/cliente/cliente.component.html
@@ -21,13 +21,15 @@
     </div>
   </div>
   <button type="submit" class="btn btn-primary mr-1" (click)="buscar()">Buscar</button>
-  <button type="button" (click)="limpiar()" class="btn btn-primary" data-toggle="modal" data-target="#crearClienteModal">
+  <button type="button" (click)="limpiar()" class="btn btn-primary" data-toggle="modal" (click)="newCliente()"
+    data-target="#crearClienteModal">
     Crear
   </button>
   <table class="table table-hover mt-2">
     <thead>
       <tr>
         <th scope="col">Opciones</th>
+        <th scope="col">razon_social</th>
         <th scope="col">Nombres</th>
         <th scope="col">Apellidos</th>
         <th scope="col">Identificación</th>
@@ -41,9 +43,9 @@
             data-target="#crearClienteModal">
             Editar
           </button>
-        
-        </th>
 
+        </th>
+        <td>{{user.razon_social}} </td>
         <td>{{user.nombre}} {{user.segundo_nombre}}</td>
         <td>{{user.apellidos}} {{user.segundo_apellido}}</td>
         <td>{{user.documento}}</td>
@@ -54,106 +56,142 @@
 
   <!-- crear cliente Modal -->
   <div class="modal fade" id="crearClienteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Crear Cliente</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="form-row">
-          <div class="form-group col-md-6 col-sm-6">
-            Primer nombre
-            <input class="form-control" id="nombreCliente" placeholder="* Nombres cliente" name="nombreCliente"
-              #nombreCliente required [(ngModel)]="clienteNew.nombre">
-          </div>
-          <div class="form-group col-md-6 col-sm-6">
-            Segundo Nombre
-            <input class="form-control" id="segundoNombreCliente" placeholder="Segundo Nombre" name="segundoNombreCliente"
-              #segundoNombreCliente required [(ngModel)]="clienteNew.segundo_nombre">
-             </div>
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Crear Cliente</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
-        <div class="form-row">
-          <div class="form-group col-md-6 col-sm-6">
-            Primer Apellido
-            <input class="form-control" id="apellidoCliente" placeholder=" Apellidos cliente"
-            name="apellidoCliente" #apellidoCliente required [(ngModel)]="clienteNew.apellidos">
+        <div class="modal-body">
+          <div class="form-row">
+            <div class="form-group col-md-12 col-sm-6">
+              <div class="custom-control custom-radio custom-control-inline" *ngFor="let pago of tipoEmpresaList">
+                <input type="radio" id="{{pago.fact_tipo_empresa_id}}" #op name="1" class="custom-control-input"
+                  (change)="selectOrdenOne(op,pago,$event)" [checked]="natural">
+                <label class="custom-control-label" for="{{pago.fact_tipo_empresa_id}}"> {{pago.nombre}}</label>
+              </div>
+            </div>
+
           </div>
-          <div class="form-group col-md-6 col-sm-6">
-            Segundo Apellido
-            <input class="form-control" id="segundoApellidoCliente" placeholder=" Segundo Apellidos"
-            name="segundoApellidoCliente" #segundoApellidoCliente required [(ngModel)]="clienteNew.segundo_apellido">
+          <div class="form-row" *ngIf="clienteNew.fact_tipo_empresa_id==2">
+            <div class="form-group col-md-6 col-sm-6">
+              Primer nombre
+              <input class="form-control" id="nombreCliente" placeholder="* Nombres cliente" name="nombreCliente"
+                #nombreCliente required [(ngModel)]="clienteNew.nombre">
+            </div>
+            <div class="form-group col-md-6 col-sm-6">
+              Segundo Nombre
+              <input class="form-control" id="segundoNombreCliente" placeholder="Segundo Nombre"
+                name="segundoNombreCliente" #segundoNombreCliente required [(ngModel)]="clienteNew.segundo_nombre">
+            </div>
           </div>
-        </div>
-        <div class="form-row">
-          <div class="form-group col-md-6 col-sm-6">
-            Tipo Identificación
-            <select id="tipoIdentificacion" name="pagoPV" #tipoIdentificacion placeholder="" [(ngModel)]="clienteNew.tipo_identificacion_id"  class="form-control" >
-            <option value="">Seleccione</option>
-            <option *ngFor="let pago of tipoIdentificacionList" [value]="pago.tipo_identificacion_id">
-              {{pago.nombre_corto}} {{pago.nombre}}
-            </option>
-          </select>
+          <div class="form-row" *ngIf="clienteNew.fact_tipo_empresa_id==2">
+            <div class="form-group col-md-6 col-sm-6">
+              Primer Apellido
+              <input class="form-control" id="apellidoCliente" placeholder=" Apellidos cliente" name="apellidoCliente"
+                #apellidoCliente required [(ngModel)]="clienteNew.apellidos">
+            </div>
+            <div class="form-group col-md-6 col-sm-6">
+              Segundo Apellido
+              <input class="form-control" id="segundoApellidoCliente" placeholder=" Segundo Apellidos"
+                name="segundoApellidoCliente" #segundoApellidoCliente required
+                [(ngModel)]="clienteNew.segundo_apellido">
+            </div>
           </div>
-          <div class="form-group col-md-6 col-sm-6">
-           Identificación
-            <input class="form-control" id="documentoCliente" placeholder="* Documento cliente"
-              name="documentoCliente" #documentoCliente required [(ngModel)]="clienteNew.documento">
+
+          <div class="form-row" *ngIf="clienteNew.fact_tipo_empresa_id==1">
+            <div class="form-group col-md-12 col-sm-12">
+              Razon social
+              <input class="form-control" id="razonSocialCliente" placeholder=" Apellidos cliente" name="razonSocialCliente"
+                #razonSocialCliente required [(ngModel)]="clienteNew.razon_social">
+            </div>
           </div>
-        
-        </div>
-        <div class="form-row">
-          <div class="form-group col-md-6 col-sm-6">
-            Dirección Cliente
-            <input class="form-control" id="direccionCliente" placeholder="* Dirección cliente"
-              name="direccionCliente" #direccionCliente required [(ngModel)]="clienteNew.direccion">
-          </div>
-          <div class="form-group col-md-6 col-sm-6">
-            Fijo
-            <input class="form-control" id="fijoCliente" placeholder="Telefono fijo" name="fijoCliente"
-              #fijoCliente required [(ngModel)]="clienteNew.fijo">
-          </div>
-        </div>
-        <div class="form-row">
-          <div class="form-group col-md-6 col-sm-6">
-            Celular
-            <input class="form-control" id="celular" placeholder="Telefono Celular" name="celular"
-              #celular required [(ngModel)]="clienteNew.celular">
-          </div>
-          <div class="form-group col-md-6 col-sm-6">
-            Mail
-            <input class="form-control" id="mailCliente" placeholder="* Correo cliente" name="mailCliente"
-              #mailCliente required [(ngModel)]="clienteNew.mail">
-          </div>
-        </div>
-        <div class="form-row">
-          <div class="form-group col-md-6 col-sm-6">
-            * Tipo Empresa
-            <select id="tipoEmpresa" name="tipoEmpresa" #tipoEmpresa       
-                [(ngModel)]="clienteNew.fact_tipo_empresa_id" class="form-control">
-                <option *ngFor="let pago of tipoEmpresaList" [value]="pago.fact_tipo_empresa_id">
-                    {{pago.nombre}}
+
+          <div class="form-row">
+            <div class="form-group col-md-4 col-sm-4">
+              * Tipo Identificación
+              <select id="tipoIdentificacion" name="pagoPV" #tipoIdentificacion placeholder=""
+                [(ngModel)]="clienteNew.tipo_identificacion_id" class="form-control">
+                <option value="">Seleccione</option>
+                <option *ngFor="let pago of tipoIdentificacionList" [value]="pago.tipo_identificacion_id">
+                  {{pago.nombre_corto}} {{pago.nombre}}
                 </option>
-            </select>
+              </select>
+            </div>
+            <div class="form-group col-md-4 col-sm-4">
+              * Identificación
+              <input class="form-control" id="documentoCliente" placeholder="* Documento cliente"
+                name="documentoCliente" #documentoCliente required [(ngModel)]="clienteNew.documento">
+            </div>
+            <div class="form-group col-md-4 col-sm-4">
+              Digito verificación
+              <input class="form-control" id="digitoCliente" placeholder="* Digito verificación" maxlength="1"
+                name="digitoCliente" #digitoCliente required [(ngModel)]="clienteNew.digito_verificacion">
+            </div>
+
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6 col-sm-6">
+              Dirección Cliente
+              <input class="form-control" id="direccionCliente" placeholder="* Dirección cliente"
+                name="direccionCliente" #direccionCliente required [(ngModel)]="clienteNew.direccion">
+            </div>
+            <div class="form-group col-md-6 col-sm-6">
+              Fijo
+              <input class="form-control" id="fijoCliente" placeholder="Telefono fijo" name="fijoCliente" #fijoCliente
+                required [(ngModel)]="clienteNew.fijo">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6 col-sm-6">
+              Celular
+              <input class="form-control" id="celular" placeholder="Telefono Celular" name="celular" #celular required
+                [(ngModel)]="clienteNew.celular">
+            </div>
+            <div class="form-group col-md-6 col-sm-6">
+              Mail
+              <input class="form-control" id="mailCliente" placeholder="* Correo cliente" name="mailCliente"
+                #mailCliente required [(ngModel)]="clienteNew.mail">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-12 col-sm-12">
+
+              <p>
+                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample"
+                  aria-expanded="false" aria-controls="collapseExample">
+                  Responsabilidad fiscales
+                </button>
+              </p>
+              <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                  <div class="form-group col-md-12">
+                    <label for="rutasActivas">Activas</label>
+                    <div id="rutasActivas" class="btn-group-vertical">
+                      <button type="button" class="btn btn-primary" *ngFor="let select of responsabilidadSelect"
+                        (click)="desactivarRuta(select)" title="{{select.nombre}}">{{select.nombre}}</button>
+                    </div>
+                  </div>
+                  <div class="form-group col-md-12">
+                    <label for="rutasInactivas">Inactivas</label>
+
+                    <div id="rutasInactivas" class="btn-group-vertical">
+                      <button type="button" class="btn btn-primary" *ngFor="let unSelect of responsabilidadUnSelect"
+                        title="{{unSelect.nombre}}" (click)="activarRuta(unSelect)">{{unSelect.nombre}}</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+            <button type="button" class="btn btn-primary" (click)="CrearCliente()">Crear</button>
+          </div>
         </div>
-          <div class="form-group col-md-6 col-sm-6">
-            % de retención
-            <input class="form-control" id="retencion" type="number" min="0" max="100" placeholder="% de retención" name="retencion"
-              #retencion required [(ngModel)]="clienteNew.retencion">
-          </div>
-          <div class="form-group col-md-6 col-sm-6">
-          
-          </div>
-        </div> 
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-primary" (click)="CrearCliente()">Crear</button>
       </div>
     </div>
   </div>
-</div>
-</div>
